# Lindenmayer_system

./: CMakeLists.txt  Makefile  geometry.hpp  graphics.cpp  graphics.hpp  lindenmayer.cpp  lindenmayer.hpp  main.cpp
examples/: cantor.txt  dragon.txt  koch.txt  plant.txt  sierpinski_crp.txt  sierpinski_tr.txt
